tests/NormalTests/paczka1/small_fuzzy/61927082.err
Error in line 4: E299bqbZ S963 2,0
Error in line 3: QWa571BBp S963 5,9
